# image-render-generative

./: .gitignore  NOTICE.md  Readme.md  setup.cfg
docs/source/: Main.md  conf.py  index.rst
scripts/: activate_env_takuma.ps1  get_control_net_nightly.sh  get_networks.ps1  get_prompt_free_diffusion.sh  get_sd.ps1  get_sd_depth.ps1  get_sd_openpose.ps1  get_sd_semseg.ps1  get_takuma_diffusers.ps1  get_takuma_diffusers.sh
scripts/patches/: 0001-patch-app.py-to-perform-__main__-check-to-allow-impo.patch  0002-Enable-execution-from-any-folder-via-rootfolder-argu.patch
src/catharsys/plugins/generative/python/actions/: generative.py  paint_pose.py  promptfreediffusion.py
src/catharsys/plugins/generative/python/actions/lib/: call_ControlNet-v1-1-nightly.py  call_Prompt-Free-Diffusion.py  call_Takuma-Diffusers.py  cls_generative.py  cls_paint_pose.py  cls_prompt_free_diffusion.py
src/catharsys/plugins/generative/util/: version.py
