[metadata]
name = generative-action-python
version = attr: catharsys.plugins.generative.util.version.__version__

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    pyjson5
    tqdm

[options.packages.find]
where=src
exclude = dev

[options.entry_points]
catharsys.action =
    /catharsys/action/generative/apply:1.0 = catharsys.plugins.generative.python.actions.generative
    /catharsys/action/generative/paint_pose:1.0 = catharsys.plugins.generative.python.actions.paint_pose
    /catharsys/action/promptfreediffusion/apply:1.0 = catharsys.plugins.generative.python.actions.promptfreediffusion
